--- a/man/ugrep.1
+++ b/man/ugrep.1
@@ -1,4 +1,4 @@
-.TH UGREP "1" "November 22, 2019" "ugrep 1.5.13" "User Commands"
+.TH UGREP "1" "November 24, 2019" "ugrep 1.6.0" "User Commands"
 .SH NAME
 \fBugrep\fR -- universal file pattern searcher
 .SH SYNOPSIS
@@ -444,9 +444,12 @@ See also the \fB\-A\fR, \fB\-B\fR, and \fB\-C\fR options.
 Prints a zero\-byte after the file name.
 .TP
 \fB\-z\fR, \fB\-\-decompress\fR
-Decompress files to search, when compressed.  If \fB\-O\fR or \fB\-t\fR is
-specified, also searches compressed files with matching extensions.
-Supports compression formats .gz, .bz, .bz2, .bzip2, .lzma, .xz.
+Decompress files to search, when compressed.  Tape archives (.tar
+and compressed .tar.gz, .taz, .tgz, .tpz files) are searched for
+matching files.  If \fB\-O\fR, \fB\-M\fR, or \fB\-t\fR is specified, searches compressed
+and archived files with the specified extensions and magic bytes.
+This version of ugrep supports .tar, .tar.gz, .taz, .tgz, .tpz, .gz,
+.bz, .bz2, .bzip2, .lzma, .xz.
 .PP
 If no \fIFILE\fR arguments are specified, or if a `-' is specified, the
 standard input is used, unless recursive searches are specified which examine
