--- a/man/ugrep.1
+++ b/man/ugrep.1
@@ -1,4 +1,4 @@
-.TH UGREP "1" "December 17, 2019" "ugrep 1.6.6" "User Commands"
+.TH UGREP "1" "December 21, 2019" "ugrep 1.6.7" "User Commands"
 .SH NAME
 \fBugrep\fR -- universal file pattern searcher
 .SH SYNOPSIS
@@ -466,8 +466,15 @@ bzip2 (requires suffix .bz, .bz2, or .bzip2).
 .PP
 If no \fIFILE\fR arguments are specified, or if a `-' is specified, the
 standard input is used, unless recursive searches are specified which examine
-the working directory.  Use `--' before the \fIFILE\fR arguments to allow file
-and directory names to start with a `-'.
+the working directory.
+.PP
+If no \fIFILE\fR arguments are specified and one of the options \fB-g\fR,
+\fB-t\fR, \fB-O\fR, \fB-M\fR, \fB--include\fR, \fB--include-dir\fR,
+\fB--exclude\fR, or \fB--exclude-dir\fR is specified, recursive searches
+are enabled, same as \fB-r\fR.
+.PP
+Use `--' before the \fIFILE\fR arguments to allow file and directory names to
+start with a `-'.
 .PP
 The regular expression pattern syntax is an extended form of the POSIX ERE
 syntax.  For an overview of the syntax see README.md or visit:
@@ -489,16 +496,16 @@ An error occurred.
 If \fB-q\fR or \fB--quiet\fR or \fB--silent\fR is used and a line is selected,
 the exit status is 0 even if an error occurred.
 .SH GLOBBING
-Globbing is used by options \fB--glob\fR, \fB--include\fR, \fB--include-dir\fR,
+Globbing is used by options \fB-g\fR, \fB--include\fR, \fB--include-dir\fR,
 \fB--include-from\fR, \fB--exclude\fR, \fB--exclude-dir\fR,
-\fB--exclude-from\fR to match pathnames and basenames.  Globbing supports
-gitignore syntax and the corresponding matching rules.  When a glob contains a
-path separator `/', the pathname is matched.  Otherwise the basename of a file
-or directory is matched.  For example, \fB*.h\fR matches \fIfoo.h\fR and
-\fIbar/foo.h\fR.  \fBbar/*.h\fR matches \fIbar/foo.h\fR but not \fIfoo.h\fR and
-not \fIbar/bar/foo.h\fR.  Use a leading `/' to force \fB/*.h\fR to match
-\fIfoo.h\fR but not \fIbar/foo.h\fR.  A glob starting with a `!' is negated,
-i.e. does not match.
+\fB--exclude-from\fR to match pathnames and basenames in recursive searches.
+Globbing supports gitignore syntax and the corresponding matching rules.  When
+a glob contains a path separator `/', the pathname is matched.  Otherwise the
+basename of a file or directory is matched.  For example, \fB*.h\fR matches
+\fIfoo.h\fR and \fIbar/foo.h\fR.  \fBbar/*.h\fR matches \fIbar/foo.h\fR but not
+\fIfoo.h\fR and not \fIbar/bar/foo.h\fR.  Use a leading `/' to force \fB/*.h\fR
+to match \fIfoo.h\fR but not \fIbar/foo.h\fR.  A glob starting with a `!' is
+negated, i.e. does not match.
 .PP
 \fBGlob Syntax and Conventions\fR
 .IP \fB*\fR
